implementación de consultas personas y vehiculos

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,36 @@
-spring.application.name=RentaVehiculosApi
+server:
+  servlet.context-path: /api/v1
+  port: 8080
+
+spring:
+  application.name: RentaVehiculosApi
+  datasource:
+    url: jdbc:h2:mem:renta_db
+    username: guest
+    password: changeIt
+    driverClassName: org.h2.Driver
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
+  h2.console:
+    path: /h2-console
+    enabled: true
+    settings.trace: false
+    settings.web-allow-others: true
+
+springdoc:
+  packagesToScan:
+    - com.pmd.rentavehiculos.web
+    - com.pmd.rentavehiculos.model
+    - com.pmd.rentavehiculos.controller
+  swagger-ui:
+    operationsSorter: alpha
+    tagsSorter: alpha
+    use-root-path: true
+
+logging:
+  level:
+    root: ERROR
+    org.springframework: ERROR
+    com.pmd.rentavehiculos: TRACE
+  pattern.console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){blue} %clr(%5level){faint}%clr(:){red} %clr(%msg){faint}%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
