--- a/src/main/resources/renta-vehiculos.yml
+++ b/src/main/resources/renta-vehiculos.yml
@@ -33,6 +33,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Persona'
+        '204':
+          description: No content
   /personas/{id}:
     get:
       summary: Recupera una persona por su identificador
@@ -57,6 +59,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Persona'
+        '404':
+          description: No existe
   /personas/{id}/rentas:
     get:
       summary: Recupera los vehiculos rentados de la persona
@@ -133,6 +137,12 @@ paths:
       responses:
         '201':
           description: OK
+        '400':
+          description: petición mal formada
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /vehiculos/{id}:
     get:
       summary: Recupera un vehiculo por su identificador
@@ -182,6 +192,12 @@ paths:
       responses:
         '202':
           description: OK
+        '400':
+          description: petición mal formada
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     delete:
       summary: Eliminar vehiculo por id
       operationId: eliminarVehiculo
@@ -220,6 +236,12 @@ paths:
       responses:
         '202':
           description: OK
+        '400':
+          description: petición mal formada
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /vehiculos/{id}/rentas:
     get:
       summary: Recupera el historial de renta de un vehiculo, solo disponible para administradores
@@ -271,6 +293,12 @@ paths:
       responses:
         '201':
           description: OK
+        '400':
+          description: petición mal formada
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /auth/login:
     post:
       summary: Registra al usuario en el sistema
@@ -437,3 +465,12 @@ components:
         fecha_exp_llave:
           type: string
           format: date-time
+    Error:
+      type: object
+      properties:
+        mensaje:
+          type: string
+        detalles:
+          type: array
+          items:
+            type: string
